# context-graph-travel

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  config.py  docker-compose.prod.yml  railway.json
backend/: pyproject.toml
backend/app/: agent.py  config.py  constants.py  context_graph_client.py  gds_client.py  main.py  memory.py  models.py  routes.py
backend/scripts/: generate_data.py
backend/tests/: test_routes.py
cypher/: gds_projections.cypher  schema.cypher
data/: fixtures.json  seed_decisions.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  ContextGraphView.tsx  DecisionTracePanel.tsx  DocumentBrowser.tsx  RagComparisonPanel.tsx  SchemaDrawer.tsx
frontend/e2e/: app.spec.ts
frontend/lib/: config.ts
frontend/theme/: index.ts
rag/: graphrag.py  reembed.py
